# Model-Deployment

./: .gitignore  LICENSE  build  docker-compose.yaml  pyproject.toml  start
containers/minio/: Dockerfile  entrypoint.sh
containers/mlflow/: Dockerfile
containers/model_prediction/: Dockerfile  model.py  pyproject.toml
containers/model_training/: Dockerfile  model.py  pyproject.toml
containers/server/: Dockerfile  pyproject.toml  server.py
