[tool.poetry]
name = "server"
version = "0.1.0"
description = "Example on how to deploy a model using FastAPI"
authors = ["Ibis Prevedello <ibiscp@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.16"
pandas = "^1.4.2"
sklearn = "^0.0"
black = "^22.3.0"
flake8 = "^4.0.1"
click = "^8.1.3"
snakemake = "^7.6.2"
dvc = "^2.10.2"
mlflow = "^1.25.1"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
python-dotenv = "^0.20.0"
boto3 = "^1.23.8"
python-multipart = "^0.0.5"
docker = "^6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
